Changelog
=========


1.0.4 (unreleased)
------------------

- Drop Plone 4.1 support. [jone]


1.0.3 (2016-05-12)
------------------

- Provide plone.app.caching etag "editmode". [jone]


1.0.2 (2016-02-12)
------------------

- Implement traversable get_state method, which returns the curren edit-mode state.
  [mathias.leimgruber]

- Use ftw.testbrowser for testing.
  [mathias.leimgruber]


1.0.1 (2013-05-24)
------------------

- General package clean up:
  Update Readme, update metadata, testing, declare dependencies


1.0 (2011-02-25)
----------------

- Initial release